Fixed form field contrast.

--- a/app/assets/stylesheets/defines.css.scss
+++ b/app/assets/stylesheets/defines.css.scss
@@ -58,6 +58,8 @@ $navbar-inverse-link-hover-bg:      $almost_black;
 $navbar-inverse-link-active-color:  $light-orange;
 $navbar-inverse-link-active-bg:     $lightgray;
 
+$input-color: #4d4d4d;
+
 //Fonts
 // -------------------------
 @import url(//fonts.googleapis.com/css?family=News+Cycle:400,700);
